--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
     "@ionic-native/barcode-scanner": "^5.26.0",
+    "@ionic-native/battery-status": "^5.22.0-beta-1",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/geolocation": "^5.26.0",
     "@ionic-native/native-geocoder": "^5.26.0",
@@ -29,6 +30,7 @@
     "cordova-android": "^8.1.0",
     "cordova-browser": "6.0.0",
     "cordova-plugin-add-swift-support": "^2.0.2",
+    "cordova-plugin-battery-status": "^2.0.3",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-nativegeocoder": "^3.4.1",
     "phonegap-plugin-barcodescanner": "^8.1.0",
@@ -76,7 +78,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-geolocation": {},
       "cordova-plugin-nativegeocoder": {},
-      "phonegap-plugin-barcodescanner": {}
+      "phonegap-plugin-barcodescanner": {},
+      "cordova-plugin-battery-status": {}
     },
     "platforms": [
       "browser",
